--- a/wan_server/pom.xml
+++ b/wan_server/pom.xml
@@ -86,5 +86,12 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.2.11</version>
 		</dependency>
+    <dependency>
+      <groupId>sample</groupId>
+      <artifactId>com.sample</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/slf4j-nop-1.7.25.jar</systemPath>
+    </dependency>
 	</dependencies>
 </project>
